--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-	"name": "fcc-learn-npm-package-json",
+    "author": "skim",
+    "name": "fcc-learn-npm-package-json",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
@@ -11,5 +12,7 @@
 		"type": "git",
 		"url": "https://idontknow/todo.git"
 	},
-	"author": "skim"
+    "engines": {
+	"node": "v10.19.0"
+    }
 }
