--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
     "author": "skim",
     "name": "fcc-learn-npm-package-json",
+    "description": "A freecodecamp project deployed on heroku",
+    "keywords": ["freecodecamp, heroku, webapp"],
+    "license": "MIT",
+    "version": "1.1.2"
     "dependencies": {
 	"express": "^4.14.0"
     },
