--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "A freecodecamp project deployed on heroku",
     "keywords": ["freecodecamp, heroku, webapp"],
     "license": "MIT",
-    "version": "1.1.2"
+    "version": "1.1.2",
     "dependencies": {
 	"express": "^4.14.0"
     },
