--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "author": "skim",
     "name": "fcc-learn-npm-package-json",
     "description": "A freecodecamp project deployed on heroku",
-    "keywords": ["freecodecamp, heroku, webapp"],
+    "keywords": ["freecodecamp", "heroku", "webapp"],
     "license": "MIT",
     "version": "1.1.2",
     "dependencies": {
