--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
-    "author": "skim",
-    "name": "fcc-learn-npm-package-json",
-    "description": "A freecodecamp project deployed on heroku",
-    "keywords": ["freecodecamp", "heroku", "webapp"],
-    "license": "MIT",
-    "version": "1.1.2",
-    "dependencies": {
-	"express": "^4.14.0",
-	"@freecodecamp/example": "1.1.0"
-    },
-    "main": "server.js",
-    "scripts": {
-	"start": "node server.js"
-    },
-    "repository": {
-	"type": "git",
-	"url": "https://idontknow/todo.git"
-    },
-    "engines": {
-	"node": "v10.19.0"
-    }
+   "author": "skim",
+   "name": "fcc-learn-npm-package-json",
+   "description": "A freecodecamp project deployed on heroku",
+   "keywords": [
+      "freecodecamp",
+      "heroku",
+      "webapp"
+   ],
+   "license": "MIT",
+   "version": "1.1.2",
+   "dependencies": {
+      "express": "^4.14.0",
+      "@freecodecamp/example": "1.1.0"
+   },
+   "main": "server.js",
+   "scripts": {
+      "start": "node server.js"
+   },
+   "repository": {
+      "type": "git",
+      "url": "https://idontknow/todo.git"
+   },
+   "engines": {
+      "node": "v10.19.0"
+   }
 }
