--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
    "version": "1.1.2",
    "dependencies": {
       "express": "^4.14.0",
-      "@freecodecamp/example": "1.2.13"
+      "@freecodecamp/example": "~1.2.13"
    },
    "main": "server.js",
    "scripts": {
