--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
    "license": "MIT",
    "version": "1.1.2",
    "dependencies": {
-      "express": "^4.14.0",
-      "@freecodecamp/example": "^1.2.13"
+      "express": "^4.14.0"
    },
    "main": "server.js",
    "scripts": {
